# AI_Security_Guardian

./: .env.example  .gitignore  AI_Guardian_Brain.spec  ARCH.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SPEC.md  VERSION  config.yaml  guardian.py  guardian_brain.py  guardian_core_release  guardian_core_release_v2  guardian_core_release_v2_sprint_20260306_v2  install_models.bat  install_models.sh  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-lint.yml  ui-check.yml
core/: main.py
core/models/: config.py  i18n.py  incident.py
core/monitors/: active_window.py  clipboard.py  heartbeat.py  keystroke.py  network.py  system_resource.py
core/viewmodels/: ai_client.py  mitigator.py  notifier.py
guardian/: main.py
guardian/models/: config.py  i18n.py
guardian/monitors/: active_window.py  clipboard.py  heartbeat.py  keystroke.py  network.py
guardian_core/: Cargo.toml  i18n.py
guardian_core/actions/: mitigation.py
guardian_core/src/: main.rs  quarantine.rs
guardian_core/src/interceptor/: clipboard.rs  file_watch.rs  memory.rs  mod.rs  network.rs  process.rs
guardian_core/src/os_agnostic/: mod.rs
guardian_core/tests/: test_simulation.rs
guardian_ui/: index.html  package-lock.json  package.json  vite.config.js
locales/: en.json  ja.json  zh-CN.json  zh-TW.json
logs/: incidents.json
scripts/: build_daemon.sh  build_dist.sh
ui/: config.yaml  index.html  package-lock.json  package.json  vite.config.ts
utils/: analyzer.py
(+37 files in other folders)
