[package]
name = "aegis-guardian-core"
version = "1.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.23.5", features = ["auto-initialize"] }
tokio = { version = "1.35", features = ["full"] }
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4.1"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
dirs = "6.0.0"
